--- a/src/main/resources/assets/nutrition/lang/en_us.lang
+++ b/src/main/resources/assets/nutrition/lang/en_us.lang
@@ -15,3 +15,8 @@ nutrient.nutrition:dairy=Dairy
 
 # Tooltips
 tooltip.nutrition:nutrients=Nutrients:
+
+# Potions
+potion.nutrition:toughness=Toughness
+potion.nutrition:nourished=Nourished
+potion.nutrition:malnourished=Malnourished
