--- a/src/main/resources/assets/nutrition/lang/de_de.lang
+++ b/src/main/resources/assets/nutrition/lang/de_de.lang
@@ -15,3 +15,8 @@ nutrient.nutrition:dairy=Milch
 
 # Tooltips
 tooltip.nutrition:nutrients=Nährstoffe:
+
+# Potions
+potion.nutrition:toughness=Robustheit
+potion.nutrition:nourished=Genährt
+potion.nutrition:malnourished=Unterernährt
