--- a/src/main/resources/assets/nutrition/lang/en_us.lang
+++ b/src/main/resources/assets/nutrition/lang/en_us.lang
@@ -17,6 +17,6 @@ nutrient.nutrition:dairy=Dairy
 tooltip.nutrition:nutrients=Nutrients:
 
 # Potions
-potion.nutrition:toughness=Toughness
+potion.nutrition:toughness=Fortitude
 potion.nutrition:nourished=Nourished
 potion.nutrition:malnourished=Malnourished
