--- a/src/main/resources/assets/nutrition/lang/zh_cn.lang
+++ b/src/main/resources/assets/nutrition/lang/zh_cn.lang
@@ -1,5 +1,5 @@
 # Keys
-key.nutrition=打开个人营养水平界面
+key.nutrition=打开营养学GUI
 
 # GUI
 gui.nutrition:nutrition_title=营养水平
@@ -15,3 +15,8 @@ nutrient.nutrition:dairy=乳类
 
 # Tooltips
 tooltip.nutrition:nutrients=营养价值：
+
+# Potions
+potion.nutrition:toughness=强健
+potion.nutrition:nourished=滋养
+potion.nutrition:malnourished=营养不良
